Ultimate bugfix for bigger packages: MessageHandlerState -> Write -> Write only that much bytes to the received that has been received!!

--- a/AsyncClientServer/AsyncClientServer.csproj
+++ b/AsyncClientServer/AsyncClientServer.csproj
@@ -13,4 +13,9 @@
     <Folder Include="Server\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="zlib.net" Version="1.0.4" />
+    <PackageReference Include="Zlib.Portable.Signed" Version="1.11.0" />
+  </ItemGroup>
+
 </Project>
